--- a/_includes/dc/who.html
+++ b/_includes/dc/who.html
@@ -30,7 +30,7 @@ All other workshops
 
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  The course is anyone interested in learning to use the R programming language to prepare and analyze data.
   <strong>
     You don't need to have any previous knowledge of the tools
     that will be presented at the workshop.
