--- a/_includes/dc/intro.html
+++ b/_includes/dc/intro.html
@@ -1,10 +1,10 @@
 <p>
   <a href="{{site.dc_site}}">Data Carpentry</a> develops and teaches workshops on the fundamental data skills needed to conduct
   research. Its target audience is learners who have little to no prior computational experience, 
-  and its lessons are domain specific, building on learners' existing knowledge to enable them to quickly 
-  apply skills learned to their own research.
+  and its lessons build on learners' existing knowledge to enable them to quickly 
+  apply skills learned to their own work.
   Participants will be encouraged to help one another
-  and to apply what they have learned to their own research problems.
+  and to apply what they have learned to their own programming problems.
 </p>
 <p align="center">
   <em>
