--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -43,10 +43,10 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
+      <tr><td>9:00 -- 12:30</td> <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
       <tr><td> </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
       <tr>
-        <td>Afternoon</td>
+        <td>13:00 -- 16:30</td>
         <td>
           {% if site.flavor == "r" %}
           <a href="https://datacarpentry.org/R-ecology-lesson/">Introduction to R</a>
@@ -62,7 +62,7 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>Morning</td>
+      <tr> <td>9:00 -- 12:30</td>
         <td>
           {% if site.flavor == "r" %}
           <a href="https://datacarpentry.org/R-ecology-lesson/">Continuation of R: Data analysis and Visualization</a>
@@ -73,7 +73,7 @@ The schedule for the different curricula are listed here:
           {% endif %}
         </td>
       </tr>
-      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
+      <tr> <td>13:00 -- 16:30</td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
       <tr>
 	<td>Evening</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
